auth in encore3
